# cv-accuracy-levers

./: .env.example  .gitignore  AGENTS.md  README.md  databricks.yml  pyproject.toml  requirements.txt
air/: README.md  baseline_sample.yaml  gpu_baseline_sample.yaml
artifacts/: cv-accuracy-levers-demo-plan.md  progress.md
notebooks/: 00_setup_and_ingest.py  01_baseline_resnet.py  02_threshold_tuning.py  03_error_review_gut_check.py  04_label_quality_embeddings.py  05_crop_first_ab_test.py  06_transfer_backbone.py  07_recommendation_summary.py  99_future_hybrid_fusion.py
scripts/: prepare_dataset.py  review_false_negatives.py  review_label_quality_embeddings.py  run_crop_first_ab.py  run_tiny_sample.py  train_baseline.py  train_gpu_baseline.py  tune_threshold.py
src/levers/: __init__.py  baseline.py  config.py  crop_first.py  data.py  error_review.py  eval.py  gpu_baseline.py  ingest.py  label_quality.py  mlflow_utils.py  threshold_tuning.py  thresholds.py
tests/: test_baseline.py  test_config.py  test_crop_first.py  test_data.py  test_error_review.py  test_eval.py  test_gpu_baseline.py  test_ingest.py  test_label_quality.py  test_prepare_dataset_script.py  test_review_false_negatives_script.py  test_review_label_quality_embeddings_script.py  test_run_crop_first_ab_script.py  test_threshold_tuning.py  test_tiny_sample_script.py  test_train_baseline_script.py  test_tune_threshold_script.py
