[project]
name = "cv-accuracy-levers"
version = "0.1.0"
description = "Recall-first computer-vision accuracy levers demo with Databricks and MLflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "Pillow>=10.0",
  "mlflow[databricks]>=3.1",
  "numpy>=1.26",
  "pandas>=2.0",
  "python-dotenv>=1.0",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
databricks = [
  "databricks-connect>=15.4",
]
dev = [
  "pytest>=8.0",
]
gpu = [
  "torch>=2.3",
  "torchvision>=0.18",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
